--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,29 @@
 :root {
-  --bg-page: #f2f2f3;
-  --font-main-color: #000000;
+  --bg-page: #FAFAFA;  //'основной цвет бэграунда, заднего фона
+  --bg-secondary-page: #EAEAEB;  //цвет фона второстепенный, используется с bg-page
+  --bg-modal: #FAFAFA; //бэграунд модальных окон;
+  --font-modal: #D1D4D7;  //цвет шрифта модальных окон, цвет бордера модальных окон
+  --border-color: #D1D4D7;  //цвет бордера между --bg-page и --bg-secondary-page
+  --bg-overlay: #4A4C52;   //цвет затеменения фона при открытой модалке
+  --bg-activated-link: #D2D3D7;   //цвет активированной ссылки.кнопки (кроме bg-button)
+  --bg-hover: #DEDEE1;   //цвет фона при наведении на ссылки.кнопки (кроме bg-button)
+  --bg-input: #F3F3F4;   //цвет фона инпута
+  --bg-button: #A626A4;   //используется для бэграунда кнопок
+  --font-main-color: #444444;   //цвет основного шрифта
+  --font-accent-color: #FFFFFF;   //цвет для текста кнопок c bg-color
 }
 
 :root[class='dark'] {
-  --bg-page: #454545;
-  --font-main-color: #f8f7f7;
+  --bg-page: #272C35;  //основной цвет бэграунда, заднего фона
+  --bg-secondary-page: #20252C;  //цвет фона второстепенный, используется с bg-page
+  --bg-modal: #303640  //бэграунд модальных окон;
+  --font-modal: #4B505B;  //цвет шрифта модальных окон, цвет бордера модальных окон
+  --border-color: #454A55;  //цвет бордера между --bg-page и --bg-secondary-page
+  --bg-overlay: #20232B;   //цвет затеменения фона при открытой модалке
+  --bg-activated-link: #31363E;   //цвет активированной ссылки.кнопки (кроме bg-button)
+  --bg-hover: #292D36;   //цвет фона при наведении на ссылки.кнопки (кроме bg-button)
+  --bg-input: #343944;   //цвет фона инпута
+  --bg-button: #C678DD;   //используется для бэграунда кнопок
+  --font-main-color: #BBBBBB;   //цвет основного шрифта
+  --font-accent-color: #FFFFFF;   //цвет для текста кнопок c bg-color
 }
