fix: fix bug in variables style

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,7 +16,7 @@
 :root[class='dark'] {
   --bg-page: #272C35;  //основной цвет бэграунда, заднего фона
   --bg-secondary-page: #20252C;  //цвет фона второстепенный, используется с bg-page
-  --bg-modal: #303640  //бэграунд модальных окон;
+  --bg-modal: #303640;  //бэграунд модальных окон;
   --font-modal: #4B505B;  //цвет шрифта модальных окон, цвет бордера модальных окон
   --border-color: #454A55;  //цвет бордера между --bg-page и --bg-secondary-page
   --bg-overlay: #20232B;   //цвет затеменения фона при открытой модалке
