--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,37 +1,41 @@
-.header_wrapper {
-  display: flex;
-  justify-content: space-between;
-  padding: 7px 10px;
-  border-bottom: 1px solid var(--border-color);
-  background-color: var(--bg-page);
-  position: sticky;
-  top: 0;
+ .header {
+   padding: 7px 10px;
+   border-bottom: 1px solid var(--border-color);
+   background-color: var(--bg-page);
+   position: sticky;
+   top: 0;
 
-  &.sticky {
-    border-bottom: 0;
-    box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.5);
-  }
+   &.sticky {
+     border-bottom: 0;
+     box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.5);
+   }
 
-  @media (max-width: $mobile-screen) {
-    flex-direction: column;
-  }
-}
+   &_wrapper {
+     display: flex;
+     justify-content: space-between;
 
-.logoLink {
-  display: flex;
-  align-items: center;
 
-  @media (max-width: $mobile-screen) {
-    flex-direction: column;
-  }
+     @media (max-width: $mobile-screen) {
+       flex-direction: column;
+     }
+   }
+ }
 
-  .appLogo {
-    width: 32px;
-    height: 32px;
-    margin-right: 5px;
-  }
+ .logoLink {
+   display: flex;
+   align-items: center;
 
-  .appName {
-    color: var(--font-main-color);
-  }
-}
+   @media (max-width: $mobile-screen) {
+     flex-direction: column;
+   }
+
+   .appLogo {
+     width: 32px;
+     height: 32px;
+     margin-right: 5px;
+   }
+
+   .appName {
+     color: var(--font-main-color);
+   }
+ }
