--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -112,6 +112,16 @@ main {
   width: 100%;
 }
 
+.form_container {
+  width: 40rem;
+  padding: 3rem 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  border: 1px solid var(--border-color);
+  border-radius: 1rem;
+}
+
 .wrapper {
   max-width: 110rem;
   padding: 0 2rem;
