--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,13 +4,19 @@
   --bg-modal: #FAFAFA; //бэграунд модальных окон;
   --font-modal: #D1D4D7;  //цвет шрифта модальных окон, цвет бордера модальных окон
   --border-color: #D1D4D7;  //цвет бордера между --bg-page и --bg-secondary-page
+  --border-input: #CCCFD3;   //цвет бордера поля input
+  --border-input-focus: #C5C8CC;   //цвет бордера инпута при фокусе
   --bg-overlay: #4A4C52;   //цвет затеменения фона при открытой модалке
   --bg-activated-link: #D2D3D7;   //цвет активированной ссылки.кнопки (кроме bg-button)
   --bg-hover: #DEDEE1;   //цвет фона при наведении на ссылки.кнопки (кроме bg-button)
   --bg-input: #F3F3F4;   //цвет фона инпута
   --bg-button: #A626A4;   //используется для бэграунда кнопок
+  --bg-button-hover: #9E60B1;   //используется для hover бэграунда кнопок
+  --bg-button-disable: #4f4f4f;   //используется для бэграунда неактивныхкнопок
   --font-main-color: #444444;   //цвет основного шрифта
   --font-accent-color: #FFFFFF;   //цвет для текста кнопок c bg-color
+  --success-color: #0C5703;   //цвет текста ошибки
+  --error-color: #CB0000;   //цвет текста ошибки
 }
 
 :root[class='dark'] {
@@ -19,11 +25,17 @@
   --bg-modal: #303640;  //бэграунд модальных окон;
   --font-modal: #4B505B;  //цвет шрифта модальных окон, цвет бордера модальных окон
   --border-color: #454A55;  //цвет бордера между --bg-page и --bg-secondary-page
+  --border-input: #4D535D;   //цвет бордера поля input
+  --border-input-focus: #41464F;   //цвет бордера инпута при фокусе
   --bg-overlay: #20232B;   //цвет затеменения фона при открытой модалке
   --bg-activated-link: #31363E;   //цвет активированной ссылки.кнопки (кроме bg-button)
   --bg-hover: #292D36;   //цвет фона при наведении на ссылки.кнопки (кроме bg-button)
   --bg-input: #343944;   //цвет фона инпута
   --bg-button: #C678DD;   //используется для бэграунда кнопок
+  --bg-button-hover: #A669BC;   //используется для hover бэграунда кнопок
+  --bg-button-disable: #4f4f4f;   //используется для бэграунда неактивныхкнопок
   --font-main-color: #BBBBBB;   //цвет основного шрифта
   --font-accent-color: #FFFFFF;   //цвет для текста кнопок c bg-color
+  --success-color: #0C5703;
+  --error-color: #CB0000;   //цвет текста ошибки
 }
