--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,6 +9,7 @@
   --bg-hover: #DEDEE1; //цвет фона при наведении на ссылки.кнопки (кроме bg-button)
   --bg-input: #F3F3F4; //цвет фона инпута
   --bg-button: #A626A4; //используется для бэграунда кнопок
+  --bg-button-hover: #B650B5; //используется для бэграунда кнопок при наведении
   --font-main-color: #444444; //цвет основного шрифта
   --font-main-color-hover: #2B2B2B; //цвет основного шрифта при наведении
   --font-accent-color: #FFFFFF; //цвет для текста кнопок c bg-color
