--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,5 @@
  .header {
-   padding: 7px 10px;
+   padding: 7px 1rem;
    border-bottom: 1px solid var(--border-color);
    background-color: var(--bg-page);
    position: sticky;
@@ -7,7 +7,7 @@
 
    &.sticky {
      border-bottom: 0;
-     box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.5);
+     box-shadow: 0px 0.8rem 3rem rgba(0, 0, 0, 0.5);
    }
 
    &_wrapper {
@@ -39,8 +39,8 @@
    }
 
    .appLogo {
-     width: 32px;
-     height: 32px;
+     width: 3.2rem;
+     height: 3.2rem;
      margin-right: 5px;
 
      fill: var(--font-main-color);
