--- a/src/components/LanguageButton/LanguageButton.module.scss
+++ b/src/components/LanguageButton/LanguageButton.module.scss
@@ -9,17 +9,17 @@
   border-radius: 50%;
   user-select: none;
   cursor: pointer;
-  width: 38px;
-  height: 24px;
+  width: 3.8rem;
+  height: 2.4rem;
 }
 
 .langPopover {
   position: absolute;
-  top: 20px;
-  right: 32px;
-  width: 160px;
-  margin-top: 10px;
-  border-radius: 8px;
+  top: 2rem;
+  right: 3.2rem;
+  width: 16rem;
+  margin-top: 1rem;
+  border-radius: 0.8rem;
   background-color: var(--bg-modal);
   border: 1px solid var(--border-color);
   overflow: hidden;
@@ -29,9 +29,9 @@
   z-index: 5;
 
   @media (max-width: $mobile-screen) {
-    top: 20px;
+    top: 2rem;
     right: 0;
-    left: 32px;
+    left: 3.2rem;
   }
 
   &_item {
@@ -48,10 +48,10 @@
     justify-content: flex-start;
     align-items: center;
     text-decoration: none;
-    min-height: 48px;
+    min-height: 4.8rem;
     box-sizing: border-box;
     white-space: nowrap;
-    padding: 8px 16px;
+    padding: 0.8rem 1.6rem;
     font-weight: 400;
     transition: background-color 0.2s linear;
 
