--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -94,7 +94,7 @@ body {
   overflow-y: scroll;
 }
 
-#__next {
+.app {
   scroll-behavior: smooth;
   min-height: 100vh;
   @include flex-column($gap: 2rem);
