--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,29 +1,29 @@
 :root {
-  --bg-page: #FAFAFA;  //'основной цвет бэграунда, заднего фона
-  --bg-secondary-page: #EAEAEB;  //цвет фона второстепенный, используется с bg-page
-  --bg-modal: #FAFAFA; //бэграунд модальных окон;
-  --font-modal: #D1D4D7;  //цвет шрифта модальных окон, цвет бордера модальных окон
-  --border-color: #D1D4D7;  //цвет бордера между --bg-page и --bg-secondary-page
-  --bg-overlay: #4A4C52;   //цвет затеменения фона при открытой модалке
-  --bg-activated-link: #D2D3D7;   //цвет активированной ссылки.кнопки (кроме bg-button)
-  --bg-hover: #DEDEE1;   //цвет фона при наведении на ссылки.кнопки (кроме bg-button)
-  --bg-input: #F3F3F4;   //цвет фона инпута
-  --bg-button: #A626A4;   //используется для бэграунда кнопок
-  --font-main-color: #444444;   //цвет основного шрифта
-  --font-accent-color: #FFFFFF;   //цвет для текста кнопок c bg-color
+  --bg-page: #fafafa; //'основной цвет бэграунда, заднего фона
+  --bg-secondary-page: #eaeaeb; //цвет фона второстепенный, используется с bg-page
+  --bg-modal: #fafafa; //бэграунд модальных окон;
+  --font-modal: #d1d4d7; //цвет шрифта модальных окон, цвет бордера модальных окон
+  --border-color: #d1d4d7; //цвет бордера между --bg-page и --bg-secondary-page
+  --bg-overlay: #4a4c52; //цвет затеменения фона при открытой модалке
+  --bg-activated-link: #d2d3d7; //цвет активированной ссылки.кнопки (кроме bg-button)
+  --bg-hover: #dedee1; //цвет фона при наведении на ссылки.кнопки (кроме bg-button)
+  --bg-input: #f3f3f4; //цвет фона инпута
+  --bg-button: #a626a4; //используется для бэграунда кнопок
+  --font-main-color: #444444; //цвет основного шрифта
+  --font-accent-color: #ffffff; //цвет для текста кнопок c bg-color
 }
 
 :root[class='dark'] {
-  --bg-page: #272C35;  //основной цвет бэграунда, заднего фона
-  --bg-secondary-page: #20252C;  //цвет фона второстепенный, используется с bg-page
-  --bg-modal: #303640;  //бэграунд модальных окон;
-  --font-modal: #4B505B;  //цвет шрифта модальных окон, цвет бордера модальных окон
-  --border-color: #454A55;  //цвет бордера между --bg-page и --bg-secondary-page
-  --bg-overlay: #20232B;   //цвет затеменения фона при открытой модалке
-  --bg-activated-link: #31363E;   //цвет активированной ссылки.кнопки (кроме bg-button)
-  --bg-hover: #292D36;   //цвет фона при наведении на ссылки.кнопки (кроме bg-button)
-  --bg-input: #343944;   //цвет фона инпута
-  --bg-button: #C678DD;   //используется для бэграунда кнопок
-  --font-main-color: #BBBBBB;   //цвет основного шрифта
-  --font-accent-color: #FFFFFF;   //цвет для текста кнопок c bg-color
+  --bg-page: #272c35; //основной цвет бэграунда, заднего фона
+  --bg-secondary-page: #20252c; //цвет фона второстепенный, используется с bg-page
+  --bg-modal: #303640; //бэграунд модальных окон;
+  --font-modal: #4b505b; //цвет шрифта модальных окон, цвет бордера модальных окон
+  --border-color: #454a55; //цвет бордера между --bg-page и --bg-secondary-page
+  --bg-overlay: #20232b; //цвет затеменения фона при открытой модалке
+  --bg-activated-link: #31363e; //цвет активированной ссылки.кнопки (кроме bg-button)
+  --bg-hover: #292d36; //цвет фона при наведении на ссылки.кнопки (кроме bg-button)
+  --bg-input: #343944; //цвет фона инпута
+  --bg-button: #c678dd; //используется для бэграунда кнопок
+  --font-main-color: #bbbbbb; //цвет основного шрифта
+  --font-accent-color: #ffffff; //цвет для текста кнопок c bg-color
 }
