--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -1,6 +1,5 @@
 .dark {
   --bg-page: #272c35; //основной цвет бэграунда, заднего фона
-  --invert-bg-page: #fafafa;
   --bg-secondary-page: #20252c; //цвет фона второстепенный, используется с bg-page
   --bg-modal: #303640; //бэграунд модальных окон;
   --font-modal: #4b505b; //цвет шрифта модальных окон, цвет бордера модальных окон
@@ -10,7 +9,8 @@
   --bg-hover: #292d36; //цвет фона при наведении на ссылки.кнопки (кроме bg-button)
   --bg-input: #343944; //цвет фона инпута
   --bg-button: #c678dd; //используется для бэграунда кнопок
-  --bg-button-hover: #B650B5;
+  --bg-button-hover: #B650B5; //используется для бэграунда кнопок при наведении
   --font-main-color: #bbbbbb; //цвет основного шрифта
+  --font-main-color-hover: #D5D5D5; //цвет основного шрифта при наведении
   --font-accent-color: #ffffff; //цвет для текста кнопок c bg-color
 }
