--- a/src/styles/themes/light.scss
+++ b/src/styles/themes/light.scss
@@ -1,6 +1,5 @@
 .light {
   --bg-page: #fafafa; //'основной цвет бэграунда, заднего фона
-  --invert-bg-page: #20252c;
   --bg-secondary-page: #eaeaeb; //цвет фона второстепенный, используется с bg-page
   --bg-modal: #fafafa; //бэграунд модальных окон;
   --font-modal: #d1d4d7; //цвет шрифта модальных окон, цвет бордера модальных окон
@@ -10,7 +9,8 @@
   --bg-hover: #dedee1; //цвет фона при наведении на ссылки.кнопки (кроме bg-button)
   --bg-input: #f3f3f4; //цвет фона инпута
   --bg-button: #a626a4; //используется для бэграунда кнопок
-  --bg-button-hover: #B650B5;
+  --bg-button-hover: #B650B5; //используется для бэграунда кнопок при наведении
   --font-main-color: #444444; //цвет основного шрифта
+  --font-main-color-hover: #2B2B2B; //цвет основного шрифта при наведении
   --font-accent-color: #ffffff; //цвет для текста кнопок c bg-color
 }
