--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,6 +13,7 @@
   &_wrapper {
     display: flex;
     justify-content: space-between;
+    column-gap: 2.5rem;
 
     @media (max-width: $mobile-screen) {
       flex-direction: column;
