--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -32,8 +32,8 @@
   --bg-activated-link: #31363E;   //цвет активированной ссылки.кнопки (кроме bg-button)
   --bg-hover: #292D36;   //цвет фона при наведении на ссылки.кнопки (кроме bg-button)
   --bg-input: #343944;   //цвет фона инпута
-  --bg-button: #C678DD;   //используется для бэграунда кнопок
-  --bg-button-hover: #A669BC;   //используется для hover бэграунда кнопок
+  --bg-button: #A626A4;   //используется для бэграунда кнопок
+  --bg-button-hover: #B650B5;   //используется для hover бэграунда кнопок
   --bg-button-disable: #4f4f4f;   //используется для бэграунда неактивныхкнопок
   --font-main-color: #BBBBBB;   //цвет основного шрифта
   --font-main-color-hover: #D5D5D5; //цвет основного шрифта при наведении
