--- a/src/pages/auth/index.module.scss
+++ b/src/pages/auth/index.module.scss
@@ -6,10 +6,44 @@
   align-items: center;
 }
 
-.form_content {
+.form_container {
+  width: 41rem;
   display: flex;
   flex-direction: column;
   gap: 3rem;
+  align-items: center;
+
+  @media screen and (max-width: $tablet-screen) {
+    width: 35rem;
+  }
+
+  @media screen and (max-width: $mobile-screen) {
+    width: 27rem;
+  }
+}
+
+.form_content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}
+
+.description_text {
+  display: flex;
+  gap: 1rem;
+  text-align: center;
+  align-items: center;
+
+  @media screen and (max-width: $mobile-screen) {
+    flex-direction: column;
+    gap: 0rem;
+  }
+}
+
+.link_text {
+  display: inline-flex;
 }
 
 .link {
