--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: space-between;
     column-gap: 2.5rem;
+    row-gap: 1rem;
 
     @media (max-width: $mobile-screen) {
       flex-direction: column;
