fix: fix color font in Input

--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -4,13 +4,18 @@
   --bg-modal: #303640; //бэграунд модальных окон;
   --font-modal: #4b505b; //цвет шрифта модальных окон, цвет бордера модальных окон
   --border-color: #454a55; //цвет бордера между --bg-page и --bg-secondary-page
+  --border-input: #4d535d; //цвет бордера поля input
+  --border-input-focus: #41464f; //цвет бордера инпута при фокусе
   --bg-overlay: #20232b; //цвет затеменения фона при открытой модалке
   --bg-activated-link: #31363e; //цвет активированной ссылки.кнопки (кроме bg-button)
   --bg-hover: #292d36; //цвет фона при наведении на ссылки.кнопки (кроме bg-button)
   --bg-input: #343944; //цвет фона инпута
-  --bg-button: #c678dd; //используется для бэграунда кнопок
-  --bg-button-hover: #B650B5; //используется для бэграунда кнопок при наведении
+  --bg-button: #a626a4; //используется для бэграунда кнопок
+  --bg-button-hover: #b650b5; //используется для бэграунда кнопок при наведении
+  --bg-button-disable: #4f4f4f; //используется для бэграунда неактивныхкнопок
   --font-main-color: #bbbbbb; //цвет основного шрифта
-  --font-main-color-hover: #D5D5D5; //цвет основного шрифта при наведении
+  --font-main-color-hover: #d5d5d5; //цвет основного шрифта при наведении
   --font-accent-color: #ffffff; //цвет для текста кнопок c bg-color
+  --success-color: #0c5703; //цвет текста ошибки
+  --error-color: #cb0000; //цвет текста ошибки
 }
