--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -23,6 +23,7 @@
   border: 1px solid var(--border-input);
   border-radius: 0.5rem;
   background-color: var(--bg-input);
+  color: var(--font-main-color);
 
   &:focus {
     background-color: inherit;
