--- a/src/components/LanguageButton/LanguageButton.module.scss
+++ b/src/components/LanguageButton/LanguageButton.module.scss
@@ -25,7 +25,9 @@
   overflow: hidden;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.2s linear, visibility 0.2s linear;
+  transition:
+    opacity 0.2s linear,
+    visibility 0.2s linear;
   z-index: 5;
 
   @media (max-width: $mobile-screen) {
