--- a/src/components/MainLoader/MainLoader.module.scss
+++ b/src/components/MainLoader/MainLoader.module.scss
@@ -10,7 +10,7 @@
   animation: lds_spinner 1.2s linear infinite;
 }
 .lds_spinner div:after {
-  content: " ";
+  content: ' ';
   display: block;
   position: absolute;
   top: 3px;
