--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,6 +5,8 @@
   position: sticky;
   top: 0;
 
+  z-index: 100;
+
   &.sticky {
     border-bottom: 0;
     box-shadow: 0px 0.1rem 1rem rgba(0, 0, 0, 0.4);
