feat: add background color for svg elements

--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -13,6 +13,7 @@
   --bg-button: #a626a4; //используется для бэграунда кнопок
   --bg-button-hover: #b650b5; //используется для бэграунда кнопок при наведении
   --bg-button-disable: #4f4f4f; //используется для бэграунда неактивныхкнопок
+  --bg-svg-elements: #a626a4; //используется для бэграунда svg элементов фона
   --font-main-color: #bbbbbb; //цвет основного шрифта
   --font-main-color-hover: #d5d5d5; //цвет основного шрифта при наведении
   --font-accent-color: #ffffff; //цвет для текста кнопок c bg-color
