--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -3,11 +3,31 @@
   align-items: center;
   gap: 1rem;
 
-  @media (max-width: $mobile-screen) {
-    margin: 0 auto;
+  @media (max-width: $tablet-screen) {
+    display: none;
   }
 }
 
 .link {
   text-decoration: none;
+}
+
+.authenticate {
+  width: 3.2rem;
+  height: 3.2rem;
+  padding: 0;
+  margin: auto 0 auto;
+  background: var(--bg-page);
+  color: var(--font-main-color);
+
+  @media (min-width: $tablet-screen) {
+    display: none;
+  }
+}
+
+.authenticateNav {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding: 1.5rem;
 }
