--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -17,5 +17,6 @@
   --font-main-color-hover: #d5d5d5; //цвет основного шрифта при наведении
   --font-accent-color: #ffffff; //цвет для текста кнопок c bg-color
   --success-color: #0c5703; //цвет текста ошибки
-  --error-color: #cb0000; //цвет текста ошибки
+  --error-color: #e6171780; //цвет текста ошибки
+  --color-link: #04ff04; // цвет ссылок
 }
