--- a/src/styles/themes/light.scss
+++ b/src/styles/themes/light.scss
@@ -18,4 +18,5 @@
   --font-accent-color: #ffffff; //цвет для текста кнопок c bg-color
   --success-color: #0c5703; //цвет текста ошибки
   --error-color: #cb0000; //цвет текста ошибки
+  --color-link: #0449e0; // цвет ссылок
 }
