--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -11,6 +11,7 @@
 
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
+  align-items: center;
   column-gap: 6rem;
   row-gap: 3.2rem;
 
