--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -27,24 +27,28 @@
     font-weight: 700;
     line-height: 1.25;
     margin-bottom: 2rem;
+    width: 73rem;
+    margin: 0 auto 2rem;
 
     @media (max-width: $laptop-screen) {
       font-size: 3.6rem;
+      width: 50rem;
     }
 
     @media (max-width: $tablet-screen) {
       font-size: 3rem;
       margin-bottom: 1rem;
+      width: 40rem;
     }
 
     @media (max-width: $mobile-screen) {
       font-size: 2.5rem;
+      width: 25rem;
     }
   }
 
   &_subtitle {
     font-size: 2rem;
-    font-weight: 500;
     margin-bottom: 4.8rem;
 
     @media (max-width: $laptop-screen) {
