feat: add implementation list of fields in type Query

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -127,3 +127,42 @@ main {
   padding: 0 2rem;
   margin: 0 auto;
 }
+
+@mixin docs_link($color) {
+  display: inline-block;
+  position: relative;
+  color: $color;
+  cursor: pointer;
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: $color;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+  }
+
+  &:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+  }
+}
+
+.key_name {
+  @include docs_link(var(--font-key-link-color));
+
+  &_title {
+    color: var(--font-key-link-color);
+  }
+}
+
+.property_name {
+  @include docs_link(var(--font-property-link-color));
+}
+
+
