--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -16,6 +16,8 @@
   --font-main-color: #bbbbbb; //цвет основного шрифта
   --font-main-color-hover: #d5d5d5; //цвет основного шрифта при наведении
   --font-accent-color: #ffffff; //цвет для текста кнопок c bg-color
+  --font-key-link-color: #734E85; //цвет для текста свойства в разделе Docs
+  --font-property-link-color: #d4a540; //цвет для текста c ссылкой в разделе Docs
   --success-color: #0c5703; //цвет текста ошибки
   --error-color: #cb0000; //цвет текста ошибки
 }
