--- a/src/styles/themes/light.scss
+++ b/src/styles/themes/light.scss
@@ -16,6 +16,8 @@
   --font-main-color: #444444; //цвет основного шрифта
   --font-main-color-hover: #2B2B2B; //цвет основного шрифта при наведении
   --font-accent-color: #ffffff; //цвет для текста кнопок c bg-color
+  --font-key-link-color: #734E85; //цвет для текста свойства в разделе Docs
+  --font-property-link-color: #d4a540; //цвет для текста c ссылкой в разделе Docs
   --success-color: #0C5703;   //цвет текста ошибки
   --error-color: #CB0000;   //цвет текста ошибки
 }
