--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -10,6 +10,7 @@
   --bg-activated-link: #31363e; //цвет активированной ссылки.кнопки (кроме bg-button)
   --bg-hover: #292d36; //цвет фона при наведении на ссылки.кнопки (кроме bg-button)
   --bg-input: #343944; //цвет фона инпута
+  --bg-input-count: #30343c; //цвет фона инпута
   --bg-button: #a626a4; //используется для бэграунда кнопок
   --bg-button-hover: #b650b5; //используется для бэграунда кнопок при наведении
   --bg-button-disable: #4f4f4f; //используется для бэграунда неактивныхкнопок
