--- a/src/styles/themes/light.scss
+++ b/src/styles/themes/light.scss
@@ -10,6 +10,7 @@
   --bg-activated-link: #d2d3d7; //цвет активированной ссылки.кнопки (кроме bg-button)
   --bg-hover: #dedee1; //цвет фона при наведении на ссылки.кнопки (кроме bg-button)
   --bg-input: #f3f3f4; //цвет фона инпута
+  --bg-input-count: #e9e9f0; //цвет фона инпута
   --bg-button: #a626a4; //используется для бэграунда кнопок
   --bg-button-hover: #b650b5; //используется для бэграунда кнопок при наведении
   --bg-button-disable: #4f4f4f; //используется для бэграунда неактивных кнопок
