feat: add InputValues and InputValue components

--- a/src/styles/themes/light.scss
+++ b/src/styles/themes/light.scss
@@ -18,6 +18,7 @@
   --font-accent-color: #ffffff; //цвет для текста кнопок c bg-color
   --font-key-link-color: #734E85; //цвет для текста свойства в разделе Docs
   --font-property-link-color: #d4a540; //цвет для текста c ссылкой в разделе Docs
+  --font-key-argument-color: #9DC69D; //цвет для текста ключа для args в разделе Docs
   --success-color: #0C5703;   //цвет текста ошибки
   --error-color: #CB0000;   //цвет текста ошибки
 }
