--- a/src/components/Docs/Docs.module.scss
+++ b/src/components/Docs/Docs.module.scss
@@ -1,6 +1,36 @@
 .container {
-  width: 30%;
+  width: 30rem;
+  height: 100%;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   border: 1px solid var(--border-color);
-
+  overflow: hidden;
+  position: absolute;
+  right: 0px;
+  overflow-y: auto;
+  overflow-x: auto;
+  top: 0px;
 }
+
+  /* Firefox */
+  .container {
+    scrollbar-width: auto;
+    scrollbar-color:var(--font-main-color);
+  }
+
+  /* Chrome, Edge, and Safari */
+  .container::-webkit-scrollbar {
+    width: 1rem;
+    height: 1rem;
+  }
+
+  .container::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  .container::-webkit-scrollbar-thumb {
+    background-color: var(--font-main-color);
+    border-radius: 1rem;
+  }
