--- a/src/components/Docs/DocsHeader/DocsHeader.module.scss
+++ b/src/components/Docs/DocsHeader/DocsHeader.module.scss
@@ -21,4 +21,13 @@
 
 .back_btn {
   width: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: 500;
+  text-align: center;
 }
