--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -113,6 +113,7 @@ footer {
 main {
   flex: 1 0 auto;
   width: 100%;
+  position: relative;
 }
 
 .form_container {
@@ -132,12 +133,14 @@ main {
 }
 
 @mixin docs_link($color) {
+  width: max-content;
   display: inline-block;
   position: relative;
   color: $color;
   cursor: pointer;
 
   &::after {
+    width: max-content;
     content: '';
     position: absolute;
     width: 100%;
@@ -166,6 +169,11 @@ main {
 
 .property_name {
   @include docs_link(var(--font-property-link-color));
+}
+
+.section_underline {
+  padding-bottom: 1rem;
+  border-bottom: 2px solid var(--border-color);
 }
 
 
