fix: fixed formatting CodeEditor

--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -20,7 +20,7 @@
   --font-accent-color: #ffffff; //цвет для текста кнопок c bg-color
   --font-key-link-color: #734e85; //цвет для текста свойства в разделе Docs
   --font-property-link-color: #d4a540; //цвет для текста c ссылкой в разделе Docs
-  --font-key-argument-color: #52A9B5; //цвет для текста ключа для args в разделе Docs
+  --font-key-argument-color: #52a9b5; //цвет для текста ключа для args в разделе Docs
   --success-color: #0c5703; //цвет текста ошибки
   --error-color: #cb0000; //цвет текста ошибки
   --color-link: #04ff04; // цвет ссылок
