fix: fix error is deisplayed in sign and sign up forms

--- a/src/styles/themes/light.scss
+++ b/src/styles/themes/light.scss
@@ -20,9 +20,7 @@
   --font-key-link-color: #734E85; //цвет для текста свойства в разделе Docs
   --font-property-link-color: #d4a540; //цвет для текста c ссылкой в разделе Docs
   --font-key-argument-color: #8EC7DF; //цвет для текста ключа для args в разделе Docs
-  --success-color: #0C5703;   //цвет текста ошибки
+  --success-color: #0C5703;   //цвет текста при удачном выполнении
   --error-color: #CB0000;   //цвет текста ошибки
-  --success-color: #0c5703; //цвет текста ошибки
-  --error-color: #cb0000; //цвет текста ошибки
   --color-link: #0449e0; // цвет ссылок
 }
