--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -20,11 +20,11 @@
 .input_field {
   height: 4rem;
   padding: 0.5rem;
-  color: inherit;
+  color: var(--font-main-color);
   border: 1px solid var(--border-input);
   border-radius: 0.5rem;
   background-color: var(--bg-input);
-  color: var(--font-main-color);
+  -webkit-text-fill-color: var(--font-main-color);
 
   &:focus {
     background-color: inherit;
