--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -90,6 +90,14 @@ label {
   }
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active,
+input:-internal-autofill-selected {
+    transition: background-color 5000s ease-in-out 0s;
+}
+
 body {
   @include font-main();
   overflow-y: scroll;
