feat: add styles for error toast

--- a/src/styles/themes/light.scss
+++ b/src/styles/themes/light.scss
@@ -23,4 +23,5 @@
   --success-color: #0C5703;   //цвет текста при удачном выполнении
   --error-color: #CB0000;   //цвет текста ошибки
   --color-link: #0449e0; // цвет ссылок
+  --bg-toast-error: #FF4040; //цвет toast сообщения с ошибкой
 }
