--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -22,5 +22,6 @@
   --font-key-argument-color: #52A9B5; //цвет для текста ключа для args в разделе Docs
   --success-color: #0C5703;   //цвет текста при удачном выполнении
   --error-color: #CB0000;   //цвет текста ошибки
-  --color-link: #04ff04; // цвет ссылок
+  --color-link: #04FF04; // цвет ссылок
+  --bg-toast-error: #FF4040; //цвет toast сообщения с ошибкой
 }
