--- a/src/components/InputEndpoint/InputEndpoint.module.scss
+++ b/src/components/InputEndpoint/InputEndpoint.module.scss
@@ -1,3 +1,10 @@
+.inputEndpoint_container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
 .form_container {
   display: flex;
   align-items: center;
@@ -8,7 +15,7 @@
 
 .input_container {
   height: 2.6rem;
-  width: 66vw;
+  width: 30vi;
 }
 
 .input_field {
