--- a/src/components/GraphPlayground/GraphPlayground.module.scss
+++ b/src/components/GraphPlayground/GraphPlayground.module.scss
@@ -1,13 +1,30 @@
 .playgroynd_container {
-  display: flex;
-  padding: 2rem;
+  display: grid;
+  padding: 0 3rem;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 80px repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
 
-.left_part {
+.input_part {
+  grid-area: 1 / 1 / 2 / 3;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: flex-start;
+  align-items: flex-end;
+  padding-bottom: 1rem;
+}
+.textEditor_part {
+  grid-area: 2 / 1 / 3 / 2;
+}
+.variables_part {
+  grid-area: 3 / 1 / 4 / 2;
+}
+.result_part {
+  grid-area: 2 / 2 / 4 / 3;
+}
+.docs_part {
+  grid-area: 1 / 3 / 4 / 4;
 }
 
 .send_button {
