--- a/src/components/Docs/Docs.module.scss
+++ b/src/components/Docs/Docs.module.scss
@@ -6,12 +6,14 @@
   flex-direction: column;
   gap: 2rem;
   border: 1px solid var(--border-color);
+  background-color: var(--bg-page);
   overflow: hidden;
   position: absolute;
   right: 0px;
   overflow-y: auto;
   overflow-x: auto;
   top: 0px;
+  z-index: 1;
 }
 
 /* Firefox */
