--- a/src/components/UI/TextArea/TextArea.module.scss
+++ b/src/components/UI/TextArea/TextArea.module.scss
@@ -1,9 +1,8 @@
 .text_editor {
   display: flex;
-  min-height: 30rem;
-  width: 50vw;
-  min-width: 400px;
-  margin-left: -4rem;
+  height: 90%;
+  width: 100%;
+  min-width: 300px;
   resize: both;
 }
 
@@ -16,6 +15,7 @@
   top: 0.2rem;
   left: 3.5rem;
   text-align: right;
+  margin-bottom: 0.4rem;
   border: none;
   width: 3.5rem;
   overflow-y: hidden;
@@ -24,17 +24,14 @@
   font-size: 1.6rem;
   line-height: 140%;
   font-family: monospace, sans-serif;
-  padding-right: 0.5rem;
-  margin-bottom: 0.4rem;
   outline: none;
   resize: none;
-  min-height: 28rem;
 }
 
 .code_editor {
-  width: 50vw;
-  min-width: 400px;
-  min-height: 30rem;
+  width: 100%;
+  min-height: 10rem;
+  padding-top: 2px;
   border: 1px solid var(--border-input);
   background-color: var(--bg-input);
   color: var(--color-link);
@@ -44,7 +41,7 @@
   padding-left: 4.5rem;
   scrollbar-width: thin;
   scrollbar-color: var(--font-main-color) var(--bg-input-count);
-  resize: both;
+  resize: none;
   overflow: auto;
   &:focus {
     background-color: inherit;
