fix: fix handleCursorPosition

--- a/src/components/InputEndpoint/InputEndpoint.module.scss
+++ b/src/components/InputEndpoint/InputEndpoint.module.scss
@@ -10,12 +10,12 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .input_container {
   height: 2.6rem;
-  width: 30vi;
+  width: 39vmax;
 }
 
 .input_field {
