--- a/src/components/GraphPlayground/GraphPlayground.module.scss
+++ b/src/components/GraphPlayground/GraphPlayground.module.scss
@@ -1,11 +1,10 @@
 .playground_container {
   display: flex;
   flex-direction: column;
+  margin-bottom: -2rem;
 }
 
 .input_part {
-  display: flex;
-  width: 45vw;
   justify-content: space-between;
   align-items: flex-end;
   justify-self: flex-start;
@@ -17,10 +16,10 @@
 .row {
   display: flex;
   overflow: hidden;
-  max-height: 65vh;
-  min-height: 65vh;
+  max-height: 68vh;
+  min-height: 68vh;
   padding: 0 30px 0 0;
-  justify-content: stretch;
+  justify-content: center;
 }
 
 .textEditor_part,
@@ -34,8 +33,9 @@
 
 .column {
   display: flex;
-  max-height: 65vh;
-  min-height: 65vh;
+  position: relative;
+  max-height: 68vh;
+  min-height: 68vh;
   width: 50vw;
   max-width: 60vw;
   min-width: 40rem;
@@ -44,14 +44,14 @@
 .textEditor_part {
   max-width: 100%;
   min-width: 100%;
-  height: 50vh;
+  height: 60vh;
   min-height: 20rem;
   padding-top: 2px;
   margin-bottom: -20px;
 }
 
 .variables_part {
-  flex-grow: 1;
+  flex: 1 1;
   margin-bottom: 25px;
 }
 
@@ -62,7 +62,7 @@
   padding-top: 2px;
   padding-right: 2px;
   width: 50vw;
-  height: 72vh;
+  height: 75vh;
   justify-self: stretch;
   align-self: flex-start;
   resize: both;
@@ -124,11 +124,12 @@
 
 .send_button {
   display: block;
-  position: relative;
-  bottom: 0;
-  right: 0;
-  height: 4rem;
-  width: 4rem;
+  position: absolute;
+  top: 126px;
+  right: 31px;
+  z-index: 20;
+  height: 3.5rem;
+  width: 3.5rem;
   border-radius: 2rem;
   background-color: var(--bg-button);
   transition: background-color 0.2s linear;
