--- a/src/components/UI/TextArea/TextArea.module.scss
+++ b/src/components/UI/TextArea/TextArea.module.scss
@@ -4,6 +4,9 @@
   width: 100%;
   min-width: 300px;
   resize: both;
+  @media (max-width: 390px) {
+    width: 105vw;
+  }
 }
 
 .text_editor:focus-within .tools svg {
@@ -68,6 +71,9 @@
   font-size: 1.2rem;
   text-align: right;
   margin-right: 3rem;
+  @media (max-width: 390px) {
+    margin-right: 9rem;
+  }
 }
 
 .tools {
