fix: add color text for status response

--- a/src/components/GraphPlayground/GraphPlayground.module.scss
+++ b/src/components/GraphPlayground/GraphPlayground.module.scss
@@ -196,6 +196,7 @@
   padding: 5px;
   border-radius: 0.5rem;
   background-color: var(--success-color);
+  color: var(--font-accent-color);
   z-index: 1;
 }
 
